--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,7 +25,7 @@ spring.jpa.show-sql=true
 jwt.header=Authorization
 jwt.secret=mySecret
 jwt.expiration=604800
-jwt.tokenHead="Bearer "
+jwt.tokenHead=Bearer 
 jwt.route.authentication.path=auth
 jwt.route.authentication.refresh=refresh
-jwt.route.authentication.register="auth/register"
+jwt.route.register=auth/register
