合法用户源切换到XML文本读取

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,4 +28,4 @@ jwt.expiration=604800
 jwt.tokenHead=Bearer 
 jwt.route.authentication.path=auth
 jwt.route.authentication.refresh=refresh
-jwt.route.register=auth/register
+jwt.route.authentication.register=auth/register
