--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,8 +24,16 @@ spring.jpa.show-sql=true
 #jwt配置信息
 jwt.header=Authorization
 jwt.secret=mySecret
-jwt.expiration=604800
+jwt.expiration=60000
 jwt.tokenHead=Bearer 
 jwt.route.authentication.path=auth
 jwt.route.authentication.refresh=refresh
 jwt.route.authentication.register=auth/register
+##RabbitMQ消息队列设置
+spring.rabbitmq.host=192.168.198.131
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=wangm
+spring.rabbitmq.password=5471351
+spring.rabbitmq.publisher-confirms=true
+spring.rabbitmq.virtual-host=/
+
